<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_edit_berita"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_berita"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />
    <item android:id="@+id/action_custom_indicator"
        android:title="Custom Indicator"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_custom_child_animation"
        android:title="ChildView Animation"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_restore_default"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="Restore default"/>
    <item android:id="@+id/action_github"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="GitHub"
        >
    </item>

</menu>
